# SSH.FTP-

./: .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Hashi.spec  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements.txt
.claude/hooks/: session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  (+2 more)
docs/: ui-style-guide.md
hashi/: __init__.py  cloudsync.py  config.py  credentials.py  dialogs.py  editor.py  fileactions.py  filebrowser.py  forward.py  jsonio.py  keygen.py  mainwindow.py  netadmin.py  permjournal.py  portability.py  privilege.py  sessionlog.py  snippets.py  ssh_core.py  sshconfig.py  style.py  terminal.py  themes.py  transferqueue.py  updatecheck.py
tests/: conftest.py  test_cloudsync.py  test_config.py  test_credentials.py  test_dialogs.py  test_editor.py  test_fileactions.py  test_filebrowser.py  test_forward.py  test_jsonio.py  test_keygen.py  test_keygen_worker.py  test_launcher_ui.py  test_mainwindow_auth.py  test_mainwindow_connection_indicator.py  test_mainwindow_sudo_button.py  test_mainwindow_windows.py  test_netadmin.py  test_netadmin_gui.py  test_permjournal.py  test_portability.py  test_privilege.py  test_proxyjump.py  test_sessionlog.py  test_snippets.py  test_ssh_core.py  test_sshconfig.py  test_style.py  test_terminal_keys.py  test_terminal_more.py  test_terminal_mouse.py  test_terminal_prompt.py  test_terminal_resize.py  test_terminal_url.py  test_themes.py  test_transferqueue.py  test_updatecheck.py
tools/: doctor.py
(+2 files in other folders)
